--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,75 @@
 <main class="w-dvw h-dvh">
-    <app-home></app-home>
+    <div class="drawer">
+        <input
+            id="menu-drawer"
+            #drawerInput
+            type="checkbox"
+            class="drawer-toggle"
+        />
+
+        <div class="drawer-content">
+            <div class="navbar bg-base-100 shadow-sm">
+                <div class="flex-none">
+                    <label class="btn btn-square btn-ghost" for="menu-drawer">
+                        <svg
+                            xmlns="http://www.w3.org/2000/svg"
+                            fill="none"
+                            viewBox="0 0 24 24"
+                            class="inline-block h-5 w-5 stroke-current"
+                        >
+                            <path
+                                stroke-linecap="round"
+                                stroke-linejoin="round"
+                                stroke-width="2"
+                                d="M4 6h16M4 12h16M4 18h16"
+                            ></path>
+                        </svg>
+                    </label>
+                </div>
+                <div class="flex-1">
+                    <a class="btn btn-ghost text-xl">daisyUI</a>
+                </div>
+                <div class="flex-none">
+                    <button class="btn btn-square btn-ghost">
+                        <svg
+                            xmlns="http://www.w3.org/2000/svg"
+                            fill="none"
+                            viewBox="0 0 24 24"
+                            class="inline-block h-5 w-5 stroke-current"
+                        >
+                            <path
+                                stroke-linecap="round"
+                                stroke-linejoin="round"
+                                stroke-width="2"
+                                d="M5 12h.01M12 12h.01M19 12h.01M6 12a1 1 0 11-2 0 1 1 0 012 0zm7 0a1 1 0 11-2 0 1 1 0 012 0zm7 0a1 1 0 11-2 0 1 1 0 012 0z"
+                            ></path>
+                        </svg>
+                    </button>
+                </div>
+            </div>
+            <div>
+                <router-outlet></router-outlet>
+            </div>
+        </div>
+
+        <div class="drawer-side">
+            <label
+                for="menu-drawer"
+                aria-label="close sidebar"
+                class="drawer-overlay"
+            ></label>
+            <ul class="menu bg-base-200 text-base-content min-h-full w-80 p-4">
+                <li>
+                    <a routerLink="/home" (click)="drawerInput.checked = false">
+                        Home
+                    </a>
+                </li>
+                <li>
+                    <a routerLink="/404" (click)="drawerInput.checked = false">
+                        404
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </div>
 </main>
